# SemiPy

./: .gitignore  README.md  conf.py  install_packages.sh  rebuild.sh  reqirments.txt  requirements.txt  setup.cfg  update_libraries.sh
Extractions.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Extractions/App/: app.py
Extractions/Datasets/: Dataset.py  IVDataset.py  test_ivdataset.py
Extractions/Extractors/: FETExtractor.py  test_fetextractor.py
SemiPy/: basedevice.csv
SemiPy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
SemiPy/App/: app.py  test_app.py
SemiPy/Datasets/: Dataset.py  IVDataset.py  test_ivdataset.py
SemiPy/Devices/: BaseDevice.py  PhysicalProperty.py
SemiPy/Documentation/: ScientificPaper.py
SemiPy/Extractors/: Extractors.py  FETExtractor.py  test_fetextractor.py
SemiPy/Physics/: DevicePhysics.py
SemiPy/Plotting/: BasicPlot.py  LinePlotting.py
SemiPy/Plotting(decom)/: Plotting.py
SemiPy/config/: globals.py  settings.py
SemiPy/helper/: math.py  paths.py
docs/: Makefile  make.bat
docs/source/: Extractions.App.rst  Extractions.Datasets.rst  Extractions.Devices.FET.rst  SemiPy.Datasets.rst  SemiPy.Devices.rst  SemiPy.Extractors.TLM.rst  SemiPy.Extractors.rst  SemiPy.Materials.Semiconductors.rst  SemiPy.Materials.rst  SemiPy.Physics.rst  SemiPy.config.rst  api_doc.rst  conf.py  contribute.rst  examples.rst  index.rst  installation.rst  modules.rst
src/Datasets/: Dataset.py  IVDataset.py  test_ivdataset.py
src/Devices/: BaseDevice.py
src/Extractors/: Extractors.py  FETExtractor.py  test_fetextractor.py
(+131 files in other folders)
