[metadata]
name = SemiPy
version = 0.1.1
description = A Python framework for analyzing, modeling, and plotting IV data of semiconductor devices.
long_description = file: README.md
url = https://2d.stanford.edu/semipy
author = Connor McClellan
author_email = cjmcc@stanford.com
license = BSD-3-Clause  # Example license
packages = ['SemiPy']
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = true
packages = find:
